test.txt
[ 25%] Building CXX object CMakeFiles/lidar_reader.dir/src/lidar_reader.cpp.o
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp: In member function ‘std::vector<ScanPoint> LiDARReader::readScan()’:
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp:76:34: error: ‘M_PI’ was not declared in this scope
   76 |       double ang_rad = raw_ang * M_PI / 180.0;
      |                                  ^~~~
make[2]: *** [CMakeFiles/lidar_reader.dir/build.make:76: CMakeFiles/lidar_reader.dir/src/lidar_reader.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:85: CMakeFiles/lidar_reader.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
